feat(telegram): message with skills has new style format.
- Also page has info current league skills;